--- a/JournalApp/src/main/resources/application.properties
+++ b/JournalApp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://rajput:rajput@cluster0.mmzx1j4.mongodb.net/journaldb?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://username:password@cluster0.mmzx1j4.mongodb.net/journaldb?retryWrites=true&w=majority&appName=Cluster0
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
